--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="up-side">
             <div class="info">
                 <h1>Register</h1>
-                <form method="POST">
+                <h4>create an account</h4>
+                <form method="POST" class="form">
                     <label>
                         Username <br>
                         <input type="text" name="username" data-rules="required|min=2">
@@ -23,6 +24,9 @@
                     <label>
                         Password <br>
                         <input type="password" name="password" data-rules="required|min=2">
+                    </label>
+                    <label>
+                        <input type="submit" value="Register" id="btn">
                     </label>
                 </form>
             </div>
