--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e8cefb18d3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
@@ -29,6 +30,15 @@
                         <input type="submit" value="Register" id="btn">
                     </label>
                 </form>
+            </div>
+            <div class="pos">
+                <h1>access created</h1>
+                <h4>for more information</h4>
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/joaonaif/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com/joaonaif/?hl=pt-br"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/JoaoNaif"><i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
         </div>
         <div class="bottom-side">
